--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           aria-labelledby="offcanvasNavbarLabel"
         >
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel human">HUMANKID</h5>
             <button
               type="button"
               class="btn-close"
@@ -46,7 +46,7 @@
               aria-label="Close"
             ></button>
           </div>
-          <div class="offcanvas-body">
+          <div class="offcanvas-body bg-body-dark">
             <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
               <li class="nav-item About ">
                 <a class="nav-link active text-white" aria-current="page" href="#">ABOUT</a>
